--- a/css/style.css
+++ b/css/style.css
@@ -185,8 +185,8 @@ html{
     padding: 20px 0;
 }
 .aboutme .container-aboutme p{
-    font-size: 18px;
-    line-height: 22px;
+    font-size: 30px;
+    line-height: 30px;
     margin-bottom: 20px;
 }
 .aboutme .container-aboutme p span{
@@ -197,6 +197,7 @@ font-weight: bold;
     display: flex;
 }
 .aboutme .fila .col{
+    padding: 30px 20px;
     width: 50%;   
 }
 .aboutme .fila .col ul{
@@ -216,8 +217,14 @@ padding: 3px 10px;
 font-weight: bold;
 border-radius: 5px;
 }
+.aboutme h3{
+    font-size: 30px;
+    font-family: oswald, sans-serif;
+    margin-bottom: 20px;
+}
 .aboutme .fila .col .container-intereses{
     display: flex;
+    
     flex-wrap: wrap;
 }
 .aboutme .fila .col .container-intereses .interes{
@@ -225,7 +232,7 @@ border-radius: 5px;
     height: 100px;
     background-color: #333b41;
     border-radius: 10px;
-    margin: 0 15px 15px 0;
+    margin: 0 25px 15px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -923,7 +930,7 @@ img {
     }
 
     .aboutme h2, .skills h2, .cv h2, .portfolio h2, .contac h2 {
-        font-size: 28px; /* Títulos de sección aún más pequeños */
+        font-size: 30px; /* Títulos de sección aún más pequeños */
     }
     .aboutme .container-aboutme p{
         font-size: 14px;
