--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,10 @@ border-radius: 5px;
     position: relative;
     z-index: 10;
 }
+.aboutme button a{
+    text-decoration: none;
+    color: #fff;
+}
 .aboutme button .overlay{
   position: absolute;
   top: 0;
